add: jwt and set cookies

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGO_URL = "mongodb+srv://chiruza:Bisimwa%4014 Grace@skynet.u9oqy.mongodb.net/?
 PORT = 7000
 
 NODE_ENV = development
+
+JWT_SECRET = 1234sniper
